fix: <ul> inside popover overlaps <p> with negative margin

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -105,10 +105,6 @@ body {
     margin-bottom: 1.5em;
   }
 
-  p+ul {
-    margin: -1em 0 1.5em 0;
-  }
-
   pre {
     margin-bottom: 18px;
     // fix inline comment indicator not showing in overflowed container
